Bug 232129 - Impossible to drag and drop events from agenda view
Summary: Impossible to drag and drop events from agenda view
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-25 17:29 UTC by Sabine Faure
Modified: 2010-03-31 20:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-03-25 17:29:00 UTC
Application: korganizer (4.5 pre-svn-1106990 (2010-03-23))
KDE Platform Version: 4.4.1 (KDE 4.4.1) (Compiled from sources)
Qt Version: 4.6.2
Operating System: Linux 2.6.27-16-generic i686
Distribution: Ubuntu 8.10

-- Information about the crash:
- Launch Korg
- Create a new event for today or use an existing one
- Drag and drop it two hours later on the same day
- If it works try again to drag and drop it 1 hour later

At some point you an error message should appear: 'Unable to lock item for modification. You cannot make any changes'

I got a crash after clicking 'ok' on the error message pop up dialogue once.

Trunk, Svn Rev 1107335

 -- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault
[KCrash Handler]
#6  0xb74397b3 in KOAgendaItem::resetMove (this=0x0) at /d/kde/src/t/kdepim/korganizer/views/agendaview/koagendaitem.cpp:449
#7  0xb742faab in KOAgenda::performItemAction (this=0x94c98c0, viewportPos=@0xbfc96624) at /d/kde/src/t/kdepim/korganizer/views/agendaview/koagenda.cpp:879
#8  0xb7430ece in KOAgenda::eventFilter_mouse (this=0x94c98c0, object=0xa996920, me=0xbfc96c38) at /d/kde/src/t/kdepim/korganizer/views/agendaview/koagenda.cpp:613
#9  0xb742d45f in KOAgenda::eventFilter (this=0x94c98c0, object=0xa996920, event=0xbfc96c38) at /d/kde/src/t/kdepim/korganizer/views/agendaview/koagenda.cpp:389
#10 0xb5afdabe in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x9173228, receiver=0xa996920, event=0xbfc96c38) at kernel/qcoreapplication.cpp:819
#11 0xb60fc9ff in QApplicationPrivate::notify_helper (this=0x9173228, receiver=0xa996920, e=0xbfc96c38) at kernel/qapplication.cpp:4300
#12 0xb60fd74f in QApplication::notify (this=0xbfc97550, receiver=0xa996920, e=0xbfc96c38) at kernel/qapplication.cpp:3869
#13 0xb7d55af3 in KApplication::notify (this=0xbfc97550, receiver=0xa996920, event=0xbfc96c38) at /d/kde/src/t/kdelibs/kdeui/kernel/kapplication.cpp:302
#14 0xb5aff879 in QCoreApplication::notifyInternal (this=0xbfc97550, receiver=0xa996920, event=0xbfc96c38) at kernel/qcoreapplication.cpp:704
#15 0xb7013d21 in QCoreApplication::sendSpontaneousEvent () from /d/qt/4/kde-qt/lib/libQt3Support.so.4
#16 0xb6103355 in QApplicationPrivate::sendMouseEvent (receiver=0xa996920, event=0xbfc96c38, alienWidget=0xa996920, nativeWidget=0x921ae08, buttonDown=0xb6979598, lastMouseReceiver=@0xb697959c, 
    spontaneous=true) at kernel/qapplication.cpp:2967
#17 0xb619cfb3 in QETWidget::translateMouseEvent (this=0x921ae08, event=0xbfc9725c) at kernel/qapplication_x11.cpp:4368
#18 0xb619e062 in QApplication::x11ProcessEvent (this=0xbfc97550, event=0xbfc9725c) at kernel/qapplication_x11.cpp:3379
#19 0xb61cc426 in x11EventSourceDispatch (s=0x9179de0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#20 0xb4ad5718 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb4ad8dc3 in ?? () from /usr/lib/libglib-2.0.so.0
#22 0xb4ad8f81 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb5b30c62 in QEventDispatcherGlib::processEvents (this=0x914f4b8, flags={i = -1077316572}) at kernel/qeventdispatcher_glib.cpp:412
#24 0xb61cbc1e in QGuiEventDispatcherGlib::processEvents (this=0x914f4b8, flags={i = -1077316524}) at kernel/qguieventdispatcher_glib.cpp:204
#25 0xb5afc536 in QEventLoop::processEvents (this=0xbfc974e0, flags={i = -1077316452}) at kernel/qeventloop.cpp:149
#26 0xb5afc7a7 in QEventLoop::exec (this=0xbfc974e0, flags={i = -1077316376}) at kernel/qeventloop.cpp:197
#27 0xb5b00051 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#28 0xb60ff69c in QApplication::exec () at kernel/qapplication.cpp:3583
#29 0x0804f30a in main (argc=1, argv=0xbfc97644) at /d/kde/src/t/kdepim/korganizer/main.cpp:65

Reported using DrKonqi
Comment 1 Sergio Martins 2010-03-27 02:31:42 UTC
The trick to reproduce this is to first drag that event from the time are to the allday area. You'll get a forbidden sign because it's not implemented.

Now, when you drag within the time area you'll reproduce your bug.
Comment 2 Sergio Martins 2010-03-27 04:03:42 UTC
SVN commit 1107870 by smartins:

Created the function IncidenceChanger::cancelChange(item) so we can release the lock when we decide we don't want to call endChange(item).

Solves problem in agenda-view when dragging outside the agenda, the lock would never be released.

BUG: 232129

MERGE: none


 M  +15 -7     incidencechanger.cpp  
 M  +12 -3     incidencechanger.h  
 M  +1 -0      interfaces/korganizer/incidencechangerbase.h  
 M  +3 -3      views/agendaview/koagenda.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1107870
Comment 3 Sabine Faure 2010-03-31 20:40:05 UTC
It is corrected now.

The crash does not happen anymore when drag and dropping an event from the agenda view.


Trunk, Svn Rev 1109533