Created the function IncidenceChanger::cancelChange(item) so we can release the lock when we decide we don't want to call endChange(item).

Solves problem in agenda-view when dragging outside the agenda, the lock would never be released.

BUG: 232129

MERGE: none

svn path=/trunk/KDE/kdepim/; revision=1107870