interfaces/korganizer/incidencechangerbase.h
@@ -57,6 +57,7 @@ class KORGANIZER_INTERFACES_EXPORT IncidenceChangerBase : public QObject
 
     virtual bool beginChange( const Akonadi::Item &incidence ) = 0;
     virtual bool endChange( const Akonadi::Item &incidence ) = 0;
+    virtual void cancelChange( const Akonadi::Item &incidence ) = 0;
 
     virtual bool addIncidence( const KCal::Incidence::Ptr &incidence, QWidget *parent ) = 0;
     virtual bool addIncidence( const KCal::Incidence::Ptr &incidence, const Akonadi::Collection &collection, QWidget* parent ) = 0;
